[gd_scene load_steps=11 format=3 uid="uid://j1ma5rxusc3a"]

[ext_resource type="Texture2D" uid="uid://c1pkhbnw222vf" path="res://assets/desktop/screenbase2.png" id="1_rr3bk"]
[ext_resource type="Texture2D" uid="uid://0rnigdxrct2y" path="res://assets/desktop/windows_logo-removebg-preview.png" id="2_ix3cy"]
[ext_resource type="Texture2D" uid="uid://btdwff3bkqura" path="res://assets/desktop/this_pc-removebg-preview.png" id="3_4lg8a"]
[ext_resource type="Texture2D" uid="uid://cumveq1av631r" path="res://assets/desktop/savefile-removebg-preview.png" id="4_lqrjl"]
[ext_resource type="Texture2D" uid="uid://v4j7c3uc8iia" path="res://assets/desktop/explorer-removebg-preview.png" id="5_ovy4p"]
[ext_resource type="Texture2D" uid="uid://bgkomtpl0ncwr" path="res://assets/desktop/trashbin-removebg-preview.png" id="6_spy8b"]
[ext_resource type="Script" path="res://Scripts/AdSpawner.gd" id="7_5ua8q"]

[sub_resource type="Animation" id="Animation_xjycy"]
length = 15.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_jmray"]
length = 0.1
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_keoa3"]
_data = {
"odbrojavanje": SubResource("Animation_xjycy"),
"stop": SubResource("Animation_jmray")
}

[node name="MonitorGame" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_rr3bk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -61.0
offset_right = 241.0
offset_bottom = -21.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="WinLogo" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ix3cy")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4lg8a")

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_lqrjl")

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_ovy4p")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 612.0
offset_top = 470.0
offset_right = 692.0
offset_bottom = 538.0
texture = ExtResource("6_spy8b")

[node name="Ads" type="Node" parent="."]
script = ExtResource("7_5ua8q")

[node name="Markers" type="Node" parent="."]

[node name="Spawn1" type="Marker2D" parent="Markers"]
position = Vector2(222, 230)

[node name="Spawn2" type="Marker2D" parent="Markers"]
position = Vector2(367, 159)

[node name="Spawn3" type="Marker2D" parent="Markers"]
position = Vector2(318, 307)

[node name="Spawn4" type="Marker2D" parent="Markers"]
position = Vector2(410, 364)

[node name="Spawn5" type="Marker2D" parent="Markers"]
position = Vector2(506, 249)

[node name="Spawn6" type="Marker2D" parent="Markers"]
position = Vector2(238, 396)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 10
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -312.5
offset_top = -105.0
offset_right = 312.5
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 15.0
value = 15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_keoa3")
}

[connection signal="timeout" from="Timer" to="Ads" method="_on_timer_timeout"]
